samples/_failures_safe/1761514748_393461_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e157fbd.c: In function ‘main’:
./samples/SAFE/__tmp_5e157fbd.c:166:9: error: expected declaration or statement at end of input
  166 |         } else if (strcmp(input, "success") == 0) {
      |         ^
./samples/SAFE/__tmp_5e157fbd.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e157fbd.c:166:9: error: expected declaration or statement at end of input
